# src/Models/dto/LivroDto.ts
@@ -3,11 +3,13 @@ export class LivroDto {
     titulo: string;
     autor: string;
     categoria: string;
+    isAvailable?: boolean;
 
-    constructor(id: number, titulo: string, autor: string, categoria: string) {
+    constructor(id: number, titulo: string, autor: string, categoria: string, isAvailable?: boolean) {
         this.id = id;
         this.titulo = titulo;
         this.autor = autor;
         this.categoria = categoria;
+        this.isAvailable = isAvailable;
     }
 }
